# pylot

./: .gitignore  README.md  commits.patch  loading.ipynb  pyproject.toml  requirements.txt  thing.ipynb
dalcalab_root/20250603_210524-0643c614b4d2132e402fbf5a30f5fc57-BLUE-FLAME/: metadata.json
dalcalab_root/20250603_210629-0643c614b4d2132e402fbf5a30f5fc57-BLUE-FLAME/: config.yml  metadata.json  properties.json
pylot/: __init__.py
pylot/analysis/: collect.py  data.py
pylot/augmentation/: geometry.py  variable.py
pylot/callbacks/: __init__.py  debug.py  ema.py  epoch.py  img.py  misc.py  profile.py  setup.py  stop.py  template.py  wrapup.py
pylot/datasets/: cuda.py  image_folder_tar.py  lmdb.py  prepare.py  selfsuper.py  split.py  thunder.py  util.py
pylot/experiment/: __init__.py  base.py  config.py  distributed.py  finetune.py  half.py  train.py  util.py
pylot/loss/: flat.py  ncc.py  segmentation.py  total_variation.py  vae.py  wgan.py
pylot/metrics/: accuracy.py  activation.py  segmentation.py  size.py  util.py
pylot/models/: conv.py  unet.py  vae.py  voxelmorph.py  wgan.py
pylot/nn/: batch_renorm.py  bmap.py  bufferdict.py  conv_block.py  ema.py  flatten.py  frozen_batchnorm.py  init.py  interpolation.py  nonlinearity.py  norm.py  record.py  regularization.py  residual.py  samplewise.py  spatial_transformer.py  squeeze_excite.py  vmap.py  weight_norm.py
pylot/optim/: larc.py  lars.py  sam.py  wrapper.py
pylot/pandas/: convenience.py
pylot/plot/: cmap.py  scales.py
pylot/torch/: __init__.py  (+2 more)
tests/: test_experiments.py  test_meter_torch.py
(+41 files in other folders)
