[project]
name = "pylot"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    'diskcache',
    'einops',
    'ipywidgets',
    'jc',
    'kornia',
    'lmdbm',
    'lz4',
    'matplotlib',
    'more_itertools',
    'msgpack',
    'msgpack_numpy',
    'numpy',
    'pandas',
    'pillow',
    'plotly',
    'pyarrow',
    'pydantic',
    'pyyaml',
    's3fs',
    'scikit-learn',
    'scipy',
    'seaborn',
    'stackprinter',
    'tabulate',
    'torch',
    'torchvision',
    'tqdm',
    'xxhash',
    'zstd'
]

[tool.setuptools.packages.find]
include = ["pylot*"]
